--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,6 +32,12 @@ jobs:
           sudo apt install -y libssl-dev
           sudo apt install -y vulkan-tools
           sudo apt install -y gamemode liblz4-dev
+          sudo apt install -y libglib2.0-dev libfuse2 patchelf
+          pip install aqtintall --user
+          aqt install-qt linux desktop 6.7.3 gcc_64 -m qtbase qtmultimedia
+          export Qt6_DIR=$HOME/Qt/6.7.3/gcc_64/lib/cmake/Qt6
+          export CMAKE_PREFIX_PATH=$Qt6_DIR
+
 
       - name: Git clone
         run: |
